--- a/DetectMiddleAndCover.ipynb
+++ b/DetectMiddleAndCover.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tâm"
+    "# Middle"
    ]
   },
   {
@@ -17,55 +17,55 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "# Đường dẫn đến folder ảnh đầu vào và folder lưu ảnh đầu ra\n",
+    "# Input folder path and output folder path\n",
     "input_folder = './hinhanh_19-21-122024/full/'\n",
     "output_folder = './middle_full/'\n",
     "\n",
-    "# Kiểm tra nếu folder đầu ra chưa tồn tại, tạo mới nó\n",
+    "# Check if the output folder does not exist, then create it\n",
     "if not os.path.exists(output_folder):\n",
     "    os.makedirs(output_folder)\n",
     "\n",
-    "# Danh sách các file ảnh trong folder đầu vào\n",
+    "# List of image files in the input folder\n",
     "image_files = [f for f in os.listdir(input_folder) if os.path.isfile(os.path.join(input_folder, f))]\n",
     "\n",
-    "# Lặp qua từng ảnh trong folder đầu vào\n",
+    "# Loop through each image in the input folder\n",
     "for image_file in image_files:\n",
     "    image_path = os.path.join(input_folder, image_file)\n",
     "    \n",
-    "    # Đọc và xử lý ảnh\n",
+    "    # Read and process the image\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is None:\n",
-    "        print(f\"Không thể đọc được ảnh {image_file}, bỏ qua ảnh này.\")\n",
+    "        print(f\"Cannot read the image {image_file}, skipping this file.\")\n",
     "        continue\n",
     "    \n",
     "    image = cv2.resize(image, (300, 400))\n",
     "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "    # Áp dụng Gaussian Blur và phát hiện cạnh Canny\n",
+    "    # Apply Gaussian Blur and Canny edge detection\n",
     "    blurred_image = cv2.GaussianBlur(gray_image, (5, 5), 0)\n",
     "    edges = cv2.Canny(blurred_image, 50, 150)\n",
     "\n",
-    "    # Tìm các đường viền (contours)\n",
+    "    # Find contours\n",
     "    contours, _ = cv2.findContours(edges, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
-    "    # Lấy kích thước và tâm của ảnh\n",
+    "    # Get image size and center\n",
     "    image_height, image_width = image.shape[:2]\n",
     "    image_center = (image_width // 2, image_height // 2)\n",
     "\n",
-    "    # Ngưỡng kích thước tối thiểu của hình chữ nhật\n",
+    "    # Minimum rectangle size threshold\n",
     "    min_width = 30\n",
     "    min_height = 30\n",
     "\n",
-    "    # Biến lưu trữ hình chữ nhật gần tâm nhất và nhỏ nhất\n",
+    "    # Variables to store the closest and smallest rectangle\n",
     "    closest_rect = None\n",
     "    closest_distance = float('inf')\n",
     "    min_area = float('inf')\n",
     "\n",
-    "    # Lặp qua từng đường viền để tìm hình chữ nhật gần nhất và nhỏ nhất\n",
+    "    # Loop through each contour to find the closest and smallest rectangle\n",
     "    for contour in contours:\n",
     "        x, y, w, h = cv2.boundingRect(contour)\n",
     "        \n",
-    "        # Kiểm tra kích thước hình chữ nhật có lớn hơn ngưỡng tối thiểu\n",
+    "        # Check if the rectangle size is above the threshold\n",
     "        if w >= min_width and h >= min_height:\n",
     "            rect_center = (x + w // 2, y + h // 2)\n",
     "            distance_from_center = np.sqrt((rect_center[0] - image_center[0]) ** 2 + (rect_center[1] - image_center[1]) ** 2)\n",
@@ -76,7 +76,7 @@
     "                closest_distance = distance_from_center\n",
     "                min_area = area\n",
     "\n",
-    "    # Nếu tìm thấy hình chữ nhật phù hợp, áp dụng bước tiếp theo với K-means clustering\n",
+    "    # If a suitable rectangle is found, apply the next step with K-means clustering\n",
     "    if closest_rect is not None:\n",
     "        x, y, w, h = closest_rect\n",
     "        side = min(w, h)\n",
@@ -150,26 +150,26 @@
     "                    # Get the bounding box of the largest contour\n",
     "                    x, y, w, h = cv2.boundingRect(largest_contour)\n",
     "\n",
-    "                    # Tính diện tích của vùng đã cắt\n",
+    "                    # Calculate the area of the cropped region\n",
     "                    area = w * h\n",
     "                    new_side = int(np.sqrt(area / 3))\n",
     "\n",
-    "                    # Tính toán tọa độ của hình vuông mới sao cho tâm của nó trùng với tâm của vùng đã cắt\n",
+    "                    # Calculate the coordinates of the new square to keep its center aligned\n",
     "                    center_x = x + w // 2\n",
     "                    center_y = y + h // 2\n",
     "                    new_x = center_x - new_side // 2\n",
     "                    new_y = center_y - new_side // 2\n",
     "\n",
-    "                    # Đảm bảo hình vuông nằm trong ranh giới của ảnh gốc\n",
+    "                    # Ensure the new square is within image boundaries\n",
     "                    new_x = max(0, new_x)\n",
     "                    new_y = max(0, new_y)\n",
     "                    new_x_end = min(image.shape[1], new_x + new_side)\n",
     "                    new_y_end = min(image.shape[0], new_y + new_side)\n",
     "\n",
-    "                    # Cắt hình vuông nhỏ từ ảnh gốc\n",
+    "                    # Crop the new small square from the original image\n",
     "                    new_crop = image[new_y:new_y_end, new_x:new_x_end]\n",
     "\n",
-    "                    # Resize hình vuông nhỏ thành 256x256\n",
+    "                    # Resize the new small square to 256x256\n",
     "                    resized_crop = cv2.resize(new_crop, (256, 256))\n",
     "\n",
     "                    # Save the result to the output folder\n",
@@ -177,44 +177,14 @@
     "                    cv2.imwrite(output_image_path, resized_crop)\n",
     "                    print(f\"Processed with large square (1/3 area): {output_image_path}\")\n",
     "\n",
-    "                else:\n",
-    "                    print(f\"No contour found in the dominant cluster for {image_file}\")\n",
-    "\n",
-    "        else:\n",
-    "            area = side * side\n",
-    "            small_side = int(np.sqrt(area / 3))\n",
-    "\n",
-    "            # Tính toán tọa độ của hình vuông nhỏ sao cho tâm của nó trùng với tâm của hình vuông ban đầu\n",
-    "            center_x = x + side // 2\n",
-    "            center_y = y + side // 2\n",
-    "            small_x = center_x - small_side // 2\n",
-    "            small_y = center_y - small_side // 2\n",
-    "\n",
-    "            # Đảm bảo hình vuông nhỏ nằm trong ranh giới của ảnh gốc\n",
-    "            small_x = max(0, small_x)\n",
-    "            small_y = max(0, small_y)\n",
-    "            small_x_end = min(image.shape[1], small_x + small_side)\n",
-    "            small_y_end = min(image.shape[0], small_y + small_side)\n",
-    "\n",
-    "            # Cắt hình vuông nhỏ từ ảnh gốc\n",
-    "            small_crop = image[small_y:small_y_end, small_x:small_x_end]\n",
-    "\n",
-    "            # Resize hình vuông nhỏ thành 256x256\n",
-    "            resized_crop = cv2.resize(small_crop, (256, 256))\n",
-    "\n",
-    "            # Save the result to the output folder\n",
-    "            output_image_path = os.path.join(output_folder, os.path.basename(image_file))\n",
-    "            cv2.imwrite(output_image_path, resized_crop)\n",
-    "            print(f\"Processed with small square: {output_image_path}\")\n",
-    "\n",
-    "print(\"Quá trình xử lý ảnh đã hoàn thành.\")\n"
+    "print(\"Image processing has been completed.\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Viền"
+    "# Cover"
    ]
   },
   {
@@ -227,55 +197,55 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "# Đường dẫn đến folder ảnh đầu vào và folder lưu ảnh đầu ra\n",
+    "# Input folder path and output folder path\n",
     "input_folder = './hinhanh_19-21-122024/full/'\n",
     "output_folder = './cover_full/'\n",
     "\n",
-    "# Kiểm tra nếu folder đầu ra chưa tồn tại, tạo mới nó\n",
+    "# Check if the output folder does not exist, then create it\n",
     "if not os.path.exists(output_folder):\n",
     "    os.makedirs(output_folder)\n",
     "\n",
-    "# Danh sách các file ảnh trong folder đầu vào\n",
+    "# List of image files in the input folder\n",
     "image_files = [f for f in os.listdir(input_folder) if os.path.isfile(os.path.join(input_folder, f))]\n",
     "\n",
-    "# Lặp qua từng ảnh trong folder đầu vào\n",
+    "# Loop through each image in the input folder\n",
     "for image_file in image_files:\n",
     "    image_path = os.path.join(input_folder, image_file)\n",
     "    \n",
-    "    # Đọc và xử lý ảnh\n",
+    "    # Read and process the image\n",
     "    image = cv2.imread(image_path)\n",
     "    if image is None:\n",
-    "        print(f\"Không thể đọc được ảnh {image_file}, bỏ qua ảnh này.\")\n",
+    "        print(f\"Cannot read the image {image_file}, skipping this file.\")\n",
     "        continue\n",
     "    \n",
     "    image = cv2.resize(image, (300, 400))\n",
     "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "    # Áp dụng Gaussian Blur và phát hiện cạnh Canny\n",
+    "    # Apply Gaussian Blur and Canny edge detection\n",
     "    blurred_image = cv2.GaussianBlur(gray_image, (5, 5), 0)\n",
     "    edges = cv2.Canny(blurred_image, 50, 150)\n",
     "\n",
-    "    # Tìm các đường viền (contours)\n",
+    "    # Find contours\n",
     "    contours, _ = cv2.findContours(edges, cv2.RETR_TREE, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
-    "    # Lấy kích thước và tâm của ảnh\n",
+    "    # Get image size and center\n",
     "    image_height, image_width = image.shape[:2]\n",
     "    image_center = (image_width // 2, image_height // 2)\n",
     "\n",
-    "    # Ngưỡng kích thước tối thiểu của hình chữ nhật\n",
+    "    # Minimum rectangle size threshold\n",
     "    min_width = 30\n",
     "    min_height = 30\n",
     "\n",
-    "    # Biến lưu trữ hình chữ nhật gần tâm nhất và nhỏ nhất\n",
+    "    # Variables to store the closest and smallest rectangle\n",
     "    closest_rect = None\n",
     "    closest_distance = float('inf')\n",
     "    min_area = float('inf')\n",
     "\n",
-    "    # Lặp qua từng đường viền để tìm hình chữ nhật gần nhất và nhỏ nhất\n",
+    "    # Loop through each contour to find the closest and smallest rectangle\n",
     "    for contour in contours:\n",
     "        x, y, w, h = cv2.boundingRect(contour)\n",
     "        \n",
-    "        # Kiểm tra kích thước hình chữ nhật có lớn hơn ngưỡng tối thiểu\n",
+    "        # Check if the rectangle size is above the threshold\n",
     "        if w >= min_width and h >= min_height:\n",
     "            rect_center = (x + w // 2, y + h // 2)\n",
     "            distance_from_center = np.sqrt((rect_center[0] - image_center[0]) ** 2 + (rect_center[1] - image_center[1]) ** 2)\n",
@@ -286,7 +256,7 @@
     "                closest_distance = distance_from_center\n",
     "                min_area = area\n",
     "\n",
-    "    # Nếu tìm thấy hình chữ nhật phù hợp, áp dụng bước tiếp theo với K-means clustering\n",
+    "    # If a suitable rectangle is found, apply the next step with K-means clustering\n",
     "    if closest_rect is not None:\n",
     "        x, y, w, h = closest_rect\n",
     "        side = min(w, h)\n",
@@ -375,7 +345,7 @@
     "                    print(f\"No contour found in the dominant cluster for {image_file}\")\n",
     "\n",
     "        else:\n",
-    "            # Nếu không tạo được hình vuông lớn, cắt hình vuông nhỏ và resize\n",
+    "            # If the large square cannot be created, crop the small square and resize\n",
     "            small_crop = image[y:y + side, x:x + side]\n",
     "            resized_crop = cv2.resize(small_crop, (256, 256))\n",
     "\n",
@@ -384,7 +354,7 @@
     "            cv2.imwrite(output_image_path, resized_crop)\n",
     "            print(f\"Processed with small square: {output_image_path}\")\n",
     "\n",
-    "print(\"Quá trình xử lý ảnh đã hoàn thành.\")\n"
+    "print(\"Image processing has been completed.\")"
    ]
   }
  ],
