--- a/vhl-op.ipynb
+++ b/vhl-op.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Xây dựng dữ liệu huấn luyện**"
+    "# **Build Training Data**"
    ]
   },
   {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-10-22T01:41:14.774140Z",
@@ -113,11 +113,11 @@
    },
    "outputs": [],
    "source": [
-    "# Đường dẫn tới thư mục chứa dữ liệu\n",
+    "# Path to the directory containing data\n",
     "data_dir = './Result/middles/'\n",
-    "image_size = (224, 224)  # Kích thước ảnh (tuỳ chọn)\n",
+    "image_size = (224, 224)  # Image size (optional)\n",
     "\n",
-    "# Đọc tất cả hình ảnh trong thư mục\n",
+    "# Read all images from the directory\n",
     "def load_images(data_dir, image_size):\n",
     "    images = []\n",
     "    labels = []\n",
@@ -130,9 +130,9 @@
     "                image = cv2.imread(img_path)\n",
     "                image = cv2.resize(image, image_size)\n",
     "                if category.__contains__(\"double\"):\n",
-    "                    label = df_doulbe.loc[img_name,'ppm']  \n",
+    "                    label = df_doulbe.loc[img_name, 'ppm']  \n",
     "                else:\n",
-    "                    label = df_ppm.loc[img_name,'ppm']\n",
+    "                    label = df_ppm.loc[img_name, 'ppm']\n",
     "                images.append(image)\n",
     "                labels.append(label)\n",
     "            except Exception as e:\n",
@@ -143,7 +143,7 @@
     "# Load dataset\n",
     "images, labels = load_images(data_dir, image_size)\n",
     "\n",
-    "# Chia dữ liệu thành tập huấn luyện và kiểm thử\n",
+    "# Split data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(images, labels, test_size=0.4, random_state=42)"
    ]
   },
@@ -151,19 +151,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Tiền xử lý dữ liệu**"
+    "# **Data Preprocessing**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Trích xuất đặc trưng màu sắc***"
+    "***Extract Color Features***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-10-22T01:41:23.756835Z",
@@ -176,31 +176,31 @@
    },
    "outputs": [],
    "source": [
-    "# Chuyển đổi không gian màu RGB, HSV, L*a*b*\n",
+    "# Convert color space to RGB, HSV, L*a*b*\n",
     "def extract_color_features(image):\n",
-    "    rgb_mean = np.mean(image, axis=(0,1))  # Tính trung bình theo kênh màu RGB\n",
+    "    rgb_mean = np.mean(image, axis=(0,1))  # Compute mean per channel in RGB space\n",
     "    hsv_image = cv2.cvtColor(image, cv2.COLOR_BGR2HSV)\n",
-    "    hsv_mean = np.mean(hsv_image, axis=(0,1))  # Trung bình trong không gian HSV\n",
+    "    hsv_mean = np.mean(hsv_image, axis=(0,1))  # Compute mean in HSV space\n",
     "    lab_image = cv2.cvtColor(image, cv2.COLOR_BGR2LAB)\n",
-    "    lab_mean = np.mean(lab_image, axis=(0,1))  # Trung bình trong không gian L*a*b*\n",
+    "    lab_mean = np.mean(lab_image, axis=(0,1))  # Compute mean in L*a*b* space\n",
     "    \n",
     "    return np.concatenate([rgb_mean, hsv_mean, lab_mean])\n",
     "\n",
-    "# Áp dụng trích xuất đặc trưng màu cho tất cả ảnh\n",
+    "# Apply color feature extraction to all images\n",
     "X_train_features = np.array([extract_color_features(img) for img in X_train])\n",
-    "X_test_features = np.array([extract_color_features(img) for img in X_test])\n"
+    "X_test_features = np.array([extract_color_features(img) for img in X_test])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Trích xuất đặc trưng kết cấu***"
+    "***Extract Texture Features***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-10-22T01:41:30.919590Z",
@@ -213,29 +213,28 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# Trích xuất LBP và HOG\n",
+    "# Extract LBP and HOG\n",
     "def extract_texture_features(image):\n",
     "    gray_image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
     "    \n",
-    "    # LBP\n",
+    "    # LBP (Local Binary Pattern)\n",
     "    lbp = local_binary_pattern(gray_image, P=8, R=1, method='uniform')\n",
     "    lbp_hist, _ = np.histogram(lbp, bins=np.arange(0, 11), range=(0, 10), density=True)\n",
     "    \n",
-    "    # HOG\n",
+    "    # HOG (Histogram of Oriented Gradients)\n",
     "    hog_features, _ = hog(gray_image, orientations=9, pixels_per_cell=(8, 8),\n",
     "                          cells_per_block=(2, 2), visualize=True)\n",
     "    \n",
     "    return np.concatenate([lbp_hist, hog_features])\n",
     "\n",
-    "# Áp dụng trích xuất đặc trưng kết cấu\n",
+    "# Apply texture feature extraction\n",
     "X_train_texture = np.array([extract_texture_features(img) for img in X_train])\n",
-    "X_test_texture = np.array([extract_texture_features(img) for img in X_test])\n"
+    "X_test_texture = np.array([extract_texture_features(img) for img in X_test])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-10-22T01:49:34.358306Z",
@@ -248,10 +247,9 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# Kết hợp đặc trưng màu sắc và kết cấu\n",
+    "# Combine color and texture features\n",
     "X_train_combined = np.concatenate([X_train_features, X_train_texture], axis=1)\n",
-    "X_test_combined = np.concatenate([X_test_features, X_test_texture], axis=1)\n"
+    "X_test_combined = np.concatenate([X_test_features, X_test_texture], axis=1)"
    ]
   },
   {
@@ -277,12 +275,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Huấn luyện mô hình dự đoán**"
+    "# **Train Prediction Model**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-10-22T01:49:34.520066Z",
@@ -295,9 +293,9 @@
    },
    "outputs": [],
    "source": [
-    "# Linear Regression (cho bài toán hồi quy)\n",
+    "# Linear Regression (for regression tasks)\n",
     "pipeline_lr = Pipeline([\n",
-    "    ('scaler', StandardScaler()),  # Chuẩn hóa dữ liệu\n",
+    "    ('scaler', StandardScaler()),  # Standardize the data\n",
     "    ('lr', LinearRegression())\n",
     "])\n",
     "\n",
@@ -308,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-10-22T01:49:34.531487Z",
@@ -321,9 +319,9 @@
    },
    "outputs": [],
    "source": [
-    "# SVM (Support Vector Regressor) cho bài toán hồi quy\n",
+    "# SVM (Support Vector Regressor) for regression tasks\n",
     "pipeline_svr = Pipeline([\n",
-    "    ('scaler', StandardScaler()),  # Chuẩn hóa dữ liệu\n",
+    "    ('scaler', StandardScaler()),  # Standardize the data\n",
     "    ('svr', SVR())\n",
     "])\n",
     "\n",
@@ -336,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-10-22T01:49:34.543461Z",
@@ -349,16 +347,16 @@
    },
    "outputs": [],
    "source": [
-    "# Random Forest Regressor (cho bài toán hồi quy)\n",
+    "# Random Forest Regressor (for regression tasks)\n",
     "pipeline_rf = Pipeline([\n",
-    "    ('scaler', StandardScaler()),  # Chuẩn hóa dữ liệu\n",
+    "    ('scaler', StandardScaler()),  # Standardize the data\n",
     "    ('rf', RandomForestRegressor())\n",
     "])\n",
     "\n",
     "param_grid_rf = {\n",
-    "    'rf__n_estimators': [50, 100, 200],\n",
-    "    'rf__max_depth': [None, 10, 20],\n",
-    "    'rf__min_samples_split': [2, 5, 10]\n",
+    "    'rf__n_estimators': [50, 100, 200],  # Number of trees\n",
+    "    'rf__max_depth': [None, 10, 20],  # Maximum depth of the trees\n",
+    "    'rf__min_samples_split': [2, 5, 10]  # Minimum samples required to split a node\n",
     "}"
    ]
   },
@@ -374,12 +372,12 @@
    },
    "outputs": [],
    "source": [
-    "# GridSearchCV cho mỗi model\n",
+    "# GridSearchCV for each model\n",
     "grid_search_lr = GridSearchCV(pipeline_lr, param_grid_lr, cv=5, scoring='neg_mean_squared_error')\n",
     "grid_search_svr = GridSearchCV(pipeline_svr, param_grid_svr, cv=5, scoring='neg_mean_squared_error')\n",
     "grid_search_rf = GridSearchCV(pipeline_rf, param_grid_rf, cv=5, scoring='neg_mean_squared_error')\n",
     "\n",
-    "# Huấn luyện từng mô hình\n",
+    "# Train each model\n",
     "print(\"Training Linear Regression...\")\n",
     "grid_search_lr.fit(X_train_combined, y_train)\n",
     "\n",
@@ -389,7 +387,7 @@
     "print(\"Training Random Forest Regressor...\")\n",
     "grid_search_rf.fit(X_train_combined, y_train)\n",
     "\n",
-    "# In ra kết quả tốt nhất cho mỗi mô hình\n",
+    "# Print the best parameters for each model\n",
     "print(\"Best parameters for Linear Regression:\", grid_search_lr.best_params_)\n",
     "print(\"Best parameters for SVR:\", grid_search_svr.best_params_)\n",
     "print(\"Best parameters for Random Forest Regressor:\", grid_search_rf.best_params_)"
@@ -403,15 +401,15 @@
    },
    "outputs": [],
    "source": [
-    "# Lưu mô hình và trọng số tốt nhất của Linear Regression\n",
+    "# Save the best model and parameters of Linear Regression\n",
     "joblib.dump(grid_search_lr.best_estimator_, 'best_linear_regression_model.pkl')\n",
     "joblib.dump(grid_search_lr.best_params_, 'best_linear_regression_params.pkl')\n",
     "\n",
-    "# Lưu mô hình và trọng số tốt nhất của SVR\n",
+    "# Save the best model and parameters of SVR\n",
     "joblib.dump(grid_search_svr.best_estimator_, 'best_svr_model.pkl')\n",
     "joblib.dump(grid_search_svr.best_params_, 'best_svr_params.pkl')\n",
     "\n",
-    "# Lưu mô hình và trọng số tốt nhất của Random Forest Regressor\n",
+    "# Save the best model and parameters of Random Forest Regressor\n",
     "joblib.dump(grid_search_rf.best_estimator_, 'best_random_forest_model.pkl')\n",
     "joblib.dump(grid_search_rf.best_params_, 'best_random_forest_params.pkl')"
    ]
@@ -424,19 +422,19 @@
    },
    "outputs": [],
    "source": [
-    "# # Tải lại mô hình và thông số của Linear Regression\n",
+    "# # Load the saved model and parameters of Linear Regression\n",
     "# best_lr_model = joblib.load('best_linear_regression_model.pkl')\n",
     "# best_lr_params = joblib.load('best_linear_regression_params.pkl')\n",
     "\n",
-    "# # Tải lại mô hình và thông số của SVR\n",
+    "# # Load the saved model and parameters of SVR\n",
     "# best_svr_model = joblib.load('best_svr_model.pkl')\n",
     "# best_svr_params = joblib.load('best_svr_params.pkl')\n",
     "\n",
-    "# # Tải lại mô hình và thông số của Random Forest\n",
+    "# # Load the saved model and parameters of Random Forest\n",
     "# best_rf_model = joblib.load('best_random_forest_model.pkl')\n",
     "# best_rf_params = joblib.load('best_random_forest_params.pkl')\n",
     "\n",
-    "# # In ra thông số tốt nhất\n",
+    "# # Print the best parameters\n",
     "# print(\"Best parameters for Linear Regression:\", best_lr_params)\n",
     "# print(\"Best parameters for SVR:\", best_svr_params)\n",
     "# print(\"Best parameters for Random Forest Regressor:\", best_rf_params)"
@@ -450,24 +448,25 @@
    },
    "outputs": [],
    "source": [
-    "# Đánh giá mô hình trên tập kiểm tra\n",
+    "# Evaluate the model on the test set\n",
     "y_pred_lr = grid_search_lr.predict(X_test_combined)\n",
     "y_pred_svr = grid_search_svr.predict(X_test_combined)\n",
     "y_pred_rf = grid_search_rf.predict(X_test_combined)\n",
     "\n",
-    "\n",
-    "# Linear Regression, SVR, Random Forest Regressor (Mean Squared Error)\n",
+    "# Calculate Mean Squared Error (MSE) for Linear Regression, SVR, and Random Forest Regressor\n",
     "mse_lr = mean_squared_error(y_test, y_pred_lr)\n",
     "mse_svr = mean_squared_error(y_test, y_pred_svr)\n",
     "mse_rf = mean_squared_error(y_test, y_pred_rf)\n",
     "\n",
+    "# Calculate R-squared score (R²) for each model\n",
     "r2_lr = r2_score(y_test, y_pred_lr)\n",
     "r2_svr = r2_score(y_test, y_pred_svr)\n",
     "r2_rf = r2_score(y_test, y_pred_rf)\n",
     "\n",
-    "print(f\"Linear Regression MSE: {mse_lr}, LR R2: {r2_lr}\\n\")\n",
-    "print(f\"SVR MSE: {mse_svr}, SVR R2: {r2_svr}\\n\")\n",
-    "print(f\"Random Forest Regressor MSE: {mse_rf}, RF R2: {r2_rf}\\n\")\n"
+    "# Print evaluation results\n",
+    "print(f\"Linear Regression MSE: {mse_lr}, LR R²: {r2_lr}\\n\")\n",
+    "print(f\"SVR MSE: {mse_svr}, SVR R²: {r2_svr}\\n\")\n",
+    "print(f\"Random Forest Regressor MSE: {mse_rf}, RF R²: {r2_rf}\\n\")"
    ]
   },
   {
@@ -479,12 +478,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Dữ liệu MSE và R^2\n",
+    "# Data for MSE and R^2\n",
     "models = ['Linear Regression','SVR', 'Random Forest Regressor']\n",
     "mse_values = [mse_lr, mse_svr, mse_rf]\n",
     "r2_values = [r2_lr, r2_svr, r2_rf]\n",
     "\n",
-    "# Tạo biểu đồ MSE\n",
+    "# Create MSE bar chart\n",
     "plt.figure(figsize=(14, 6))\n",
     "\n",
     "# MSE\n",
@@ -505,7 +504,7 @@
     "for i, v in enumerate(r2_values):\n",
     "    plt.text(i, v + 0.01, f\"{v:.4f}\", ha='center', fontsize=12)\n",
     "\n",
-    "# Hiển thị biểu đồ\n",
+    "# Display the plot\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
